Added admin user

--- a/app/views/clinics/admin.html.erb
+++ b/app/views/clinics/admin.html.erb
@@ -1,5 +1,10 @@
 <div class="container below-header">
 	<br/>
+      <ul>
+        <li>Clinics</li>
+        <li><%= link_to "Users", usernames_path%></li>
+        <li>Orders</li>
+      </ul>
       <h2 class="featurette-heading">All clinics</h2>
       <div class="featurette">
           <h3>All Clinics</h3>
