--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,6 @@
   <meta name="author" content="Sexual Health Innovations, with mad props to Twitter Bootstrap"> 
 </head>
 <body>
-
 	   <!-- NAVBAR
     ================================================== -->
     <div class="navbar-wrapper">
@@ -48,8 +47,9 @@
                 <li class="">
                   <% if logged_in? %>
                     <%= "Logged in as #{current_user.username}" %>
+                    <%= link_to "(logout)", logout_path %>
                   <% else %>
-                    <a class="pull-right">Logged out</a>
+                    <%= link_to "Login", login_path %>
                   <% end %>
                 </li>
               </ul>
@@ -60,8 +60,11 @@
      <!--  </div> /.container -->
     </div><!-- /.navbar-wrapper -->
 
-    <%= yield %>
 
+    <%= yield %>
+    <p class="flash">
+      <%= flash.notice %>
+    </p>
 
       <!-- /END THE FEATURETTES -->
 
