--- a/app/views/usernames/edit.html.erb
+++ b/app/views/usernames/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="container below-header">
-<h1>Editing User</h1>
+
+<h1>Editing Users</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @username %> |
-<%= link_to 'Back', usernames_path %>
+<%= link_to 'Back', username_path %>
