--- a/app/views/usernames/index.html.erb
+++ b/app/views/usernames/index.html.erb
@@ -23,4 +23,6 @@
 
 <br />
 
-<%= link_to 'New User', new_username_path %>
+<%= link_to 'New User', new_username_path %></br>
+
+<%= link_to 'Back to admin panel', admin_path %>
