--- a/app/views/clinics/index.html.erb
+++ b/app/views/clinics/index.html.erb
@@ -106,7 +106,7 @@
 
           <div class="row" id="team">
             <div class="span4">
-              <img class="img-rounded" data-src="holder.js/140x140">
+              <%= image_tag("jess.png", :alt => "Jessica Ladd") %>
               <h3>Jess Ladd</h3>
               <p>Executive Director</p>
               <button class="btn" id="jess_btn">More about Jess</button>
@@ -115,7 +115,7 @@
               </div>
             </div>
             <div class="span4">
-              <img class="img-rounded" data-src="holder.js/140x140">
+              <%= image_tag("jenny.png", :alt => "Jenny McManus") %>
               <h3>Jenny McManus</h3>
               <p>Director of Operations</p>
               <button class="btn">More about Jenny</button>
@@ -124,12 +124,12 @@
               </div>
             </div>
             <div class="span4">
-              <img class="img-rounded" data-src="holder.js/140x140">
+              <%= image_tag("charlotte.png", :alt => "Charlotte Gaydos") %>
               <h3>Charlotte Gaydos</h3>
               <p>Chair of the Board</p>
               <button class="btn">More about Charlotte</button>
               <div id="charlotte" class="more_about" style="display: none;">
-                Charlotte is awesome.
+                Charlotte is the Chair of the Board of Sexual Health Innovations and a renowed researcher in sexually transmitted infections. She is a professor at the Johns Hopkins School of Medicine.
               </div>
             </div>
           </div>
@@ -140,7 +140,7 @@
 
         <div class="featurette">
           <h2 class="featurette-heading">Will your patients use it? <span class="muted">Let's find out.</span></h2>
-          <p class="lead">We don't know whether or not So They Can Know will work for every patient population. Evaluations of similar services have shown mixed results. But hey, it's probably better than nothing, and we won't know unless we try.</p><br/><br/>
+          <p class="lead">We don't know whether or not So They Can Know will work for every patient population. Evaluations of similar services have shown mixed results. Work with us to learn where So They Can Know works and where it doesn't. Free for you, free for your patients.</p><br/><br/>
           <center>
             <a href="clinics/new" class="btn btn-large btn-primary"><i class="icon-list-alt"></i>  Sign Up</a> 
           </center>
