--- a/app/views/clinics/new.html.erb
+++ b/app/views/clinics/new.html.erb
@@ -26,9 +26,13 @@
               <div class="controls">
                 <%= f.text_field :address_line_1, class: "span6", placeholder: "Address Line 1" %>
               </div>
+            </div>
+            <div class="control-group">
               <div class="controls">
                 <%= f.text_field :address_line_2, class: "span6", placeholder: "Address Line 2" %>
               </div>
+            </div>
+            <div class="control-group">
               <div class="controls controls-row">
               	<%= f.text_field :city, class: "span3", placeholder: "City" %>
                 <select class="span1" name="clinic[state]" id="clinic_state">
